# UNet-Medical-Image-Contour-Segmentation-cpp

./: .gitignore  CMakeLists.txt  seg_main.cpp  segmentation_log.txt  轮廓分割集成说明-CPU版.docx  轮廓分割集成说明-GPU版.docx
include/: cleanup.h  initialize.h  mask2polygon.h  png_denormalize.h  png_normalize.h  predict.h  preprocess.h  process.h  raw2png.h
src/: cleanup.cpp  initialize.cpp  main.cpp  mask2polygon.cpp  png_denormalize.cpp  png_normalize.cpp  post_process.cpp  postprocess.cpp  predict.cpp  preprocess.cpp  process.cpp  raw2png.cpp  seg_main.cpp
